--- a/inc/woocommerce/css/woocommerce.css
+++ b/inc/woocommerce/css/woocommerce.css
@@ -2267,6 +2267,9 @@ ul.products li.product:nth-child(4n+1) {
 .shop-with-sidebar ul.products li.product:nth-child(4n+1) {
     clear: none;
 }
+.shop-with-sidebar ul.products li.product:nth-child(3n+1) {
+    clear: left;
+}
 h1.page-title {
 	margin-top: 0;
 }
